Use logger for every exception